[package]
name = "HotTopicApp"
version = "1.1.5"
description = "使用 Tauri + React + Vite + Axios + TailwindCSS 构建的今日热榜聚合展示平台"
authors = ["John"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-http = "2.5.0"
tauri = { version = "2.6.2", features = [] }

tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "gzip", "brotli", "deflate"] }
base64 = "0.22"
